--- a/Pulumi.staging.yaml
+++ b/Pulumi.staging.yaml
@@ -2,6 +2,9 @@ config:
   first_go_pulumi_app:backend_port: "3003"
   first_go_pulumi_app:database: cart
   first_go_pulumi_app:frontend_port: "3002"
-  first_go_pulumi_app:mongo_host: mongodb://mongo:27018
+  first_go_pulumi_app:mongo_host: mongo
+  first_go_pulumi_app:mongo_password:
+    secure: AAABADQSJu9KPxZJGhwt2H3oXHFej5kdFA33oIiQ87xrnMaQ
   first_go_pulumi_app:mongo_port: "27018"
+  first_go_pulumi_app:mongo_username: admin
   first_go_pulumi_app:node_environment: development
